# LearnOpenGL

./: CMakeLists.txt  README.md  Shader.cpp  Shader.h  glad.c  main.cpp
dependencies/glad/: glad.c  glad.h
dependencies/stb/: stb_image.cpp
shaders/: basic_fragment_shader.frag  basic_light_shader.frag  basic_lighting_shader.frag  basic_lighting_shader.vert  basic_vertex_shader.vert
src/: main.cpp
src/helpers/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h
